--- a/Ud4/OD03/styles.css
+++ b/Ud4/OD03/styles.css
@@ -3,20 +3,22 @@
     padding: 0;
 }
 
-h1 {
+body {
+    font-family: Arial, sans-serif;
     text-align: center;
+    margin: 20px;
 }
 
 table {
-    width: 50%;
-    margin: auto;
+    width: 60%;
+    margin: 20px auto;
     border-collapse: collapse;
 }
 
 th, td {
     border: 1px solid black;
-    text-align: center;
     padding: 8px;
+    text-align: center;
 }
 
 th {
